Bug 90095 - UI: Close button acts as OK
Summary: UI: Close button acts as OK
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: Other All
: medium major
Assignee: Michael Horn
URL:
Whiteboard: target:4.5.0 target:4.4.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-03-19 06:28 UTC by pierre-yves samyn
Modified: 2015-12-17 08:49 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-yves samyn 2015-03-19 06:28:52 UTC
Hi

Platform: Windows 7/64 & Version: 4.4.1.1 Build ID: b5ac74bf8683a92078a2bc8aff97d4b436af63cb Locale: fr_FR

Pressing the "close" button of a dialog has the same result as clicking the "OK" button.

Steps to reproduce:

First Issue: In Writer, Calc... (not from the Start Center)

1.File> Templates> Manage
2.Click to select a template
3.Click "Delete" in the toolbar. 

Expected & actual result: dialog opens "Do you want to delete..."

4.Close the dialog with the close button (the cross, not "Yes", not "No" buttons).

Expected: deletion is canceled
Actual result: template deleted

Second example

1.File> New> Text
2.Right click "Default Style" in the "Styles & formatting" panel of the sidebar then "New", Organize tab, replace "Untitled1" by what you want (e.g. Foo)
3.Change tab (e.g. click Indents & Spacing). We can see that the name of the new style is already in the list
4.Close the dialog with the close button (cross): style remains.
5.Right click the "foo" style, you can not delete.
6.Save and reload the document: "ghost" style has disappeared.

I set severity Major because of the possible loss of data (template).

Regards
Pierre-Yves
Comment 1 pierre-yves samyn 2015-03-19 06:30:07 UTC
Reproduced on Windows 7 & 4.4.1.2: 
http://ask.libreoffice.org/en/question/47814/serious-warning-close-button-acts-as-ok/?comment=47882#comment-47882

I set status to New.

Regards
Pierre-Yves
Comment 2 pierre-yves samyn 2015-03-19 06:33:17 UTC
Hi again...

If necessary I add that the first example concerns the deletion of a custom template, not one of the templates provided by default.

Pierre-Yves
Comment 3 Matthew Francis 2015-03-19 08:43:39 UTC
The first issue reported in comment 0 started at the below commit
Adding Cc: to caolanm@redhat.com; Could you possibly take a look at this? Thanks

    commit a107bdfdfc1baf73f14055262d64bf616fc0a889
    Author:     Caolán McNamara <caolanm@redhat.com>
    AuthorDate: Mon Aug 18 08:50:54 2014 +0100
    Commit:     Caolán McNamara <caolanm@redhat.com>
    CommitDate: Mon Aug 18 10:57:21 2014 +0100
    
        ErrorBox->MessageDialog
    
        Change-Id: I57d4e43460e40d3aff54873280eddbb18c12446b


(I will split the second issue into a separate bug. One report per bug please)
Comment 4 Matthew Francis 2015-03-19 08:58:17 UTC
Unrelated (in cause) second issue moved to bug 90099
Comment 5 Michael Horn 2015-03-21 02:37:01 UTC
I've submitted a patch to fix the first issue. It's currently under review
Comment 6 Commit Notification 2015-03-23 09:50:53 UTC
Michael Horn committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=093846124b06961daa400735eaf0d50115cf8690

tdf#90095 Fixed wrong behavior of template delete dialog

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-03-24 04:30:06 UTC
Michael Horn committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=662b8c0741f6e864b5b4af07c1a74737ef223c4e&h=libreoffice-4-4

tdf#90095 Fixed wrong behavior of template delete dialog

It will be available in 4.4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 pierre-yves samyn 2015-05-23 14:50:31 UTC
Hi

(In reply to Commit Notification from comment #7)
> Michael Horn committed a patch related to this issue.
> It has been pushed to "libreoffice-4-4":
> 

Verified on windows 7/64 & Version: 4.4.3.2
Build ID: 88805f81e9fe61362df02b9941de8e38a9b5fd16
Locale: fr_FR

Thank you
Regards
Pierre-Yves
Comment 9 Robinson Tryon (qubit) 2015-12-17 08:49:25 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]