tdf#90095 Fixed wrong behavior of template delete dialog

The template delete was coded in such a way that the default
behavior was to delete the template/folder unless the user pressed
no. This caused the template to be deleted if the dialog was closed
using the "x" button. I changed the logic so that the dialog will
only delete the template/folder if the user presses yes. Any other
button press will do nothing but close the dialog.

Change-Id: Id096b4fa22b900ce70de3cefb9c40dd827320050